# Promyczek

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/stb/: CMakeLists.txt
lib/stb/include/: stb_image_write.h
src/: CMakeLists.txt  Camera.h  Common.h  Image.cpp  Image.h  Main.cpp
src/Math/: Ray.h  Utils.h  Vec3.cpp  Vec3.h
src/Model/: Hittable.h  HittableList.cpp  HittableList.h  Material.h  Scene.h  Sphere.cpp  Sphere.h  World.cpp  World.h
src/Model/Materials/: Material.h
src/Model/Primitives/: Collision.h  Sphere.cpp  Sphere.h
src/Rendering/: Camera.h  Raytracer.cpp  Raytracer.h
src/Viewer/: Viewer.cpp  Viewer.h
